# ferry

./: .gitignore  Cargo.toml  README.md  build.sh
ferry-cli/: Cargo.toml
ferry-cli/src/: connect.rs  discover.rs  main.rs
ferry-core/: Cargo.toml
ferry-core/src/: client.rs  discovery.rs  lib.rs  serve.rs  server.rs  transport.rs  utils.rs
ferry-core/src/discovery/: advertisement.rs  find_services.rs  score_ip.rs
ferry-core/src/server/: tcp.rs
ferry-core/src/transport/: factory.rs  quic.rs
ferry-core/src/transport/quic/: cert_utils.rs  client.rs  connection.rs  server.rs  test.rs
ferry-core/src/utils/: name_generator.rs
