[package]
name = "ferry"
description = "A client-server command line application to transfer files and folders. Blazing fast."
version = "0.1.0"
edition = "2024"
authors = ["Aritra Bhuiya"]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
ferry-core = { path = "../ferry-core" }
anyhow = "1.0.100"
comfy-table = "7.2.1"
